[metadata]
name = reple
version = 0.1.0.1
author = Benjamin Brock
author_email = brock@cs.berkeley.edu
summary = "replay-based" REPL for compiled languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenBrock/reple
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
         Programming Language :: Python :: 3
         License :: OSI Approved :: BSD License
         Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    prompt_toolkit
    pygments

[options.package_data]
reple =
    configs/*

[options.entry_points]
console_scripts =
    reple = reple.reple:main
